# n0-error

./: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  cliff.toml  deny.toml
.github/workflows/: ci.yaml  docs.yaml  tests.yaml
examples/: basic.rs  simple.rs
n0-error-macros/: Cargo.toml
n0-error-macros/src/: lib.rs
pr/1/docs/n0_error/: macro.anyerr.html  macro.bail.html  macro.bail_any.html  macro.ensure.html  macro.ensure_any.html  macro.try_or.html  macro.try_or_any.html  struct.AnyError.html  struct.Chain.html  struct.Location.html  struct.Meta.html  struct.Report.html
pr/10/docs/n0_error/: fn.Ok.html  trait.StackError.html  trait.StackErrorExt.html
pr/11/docs/n0_error/: all.html  attr.stack_error.html  fn.Ok.html  index.html  struct.Meta.html  struct.NoneError.html  type.Result.html
pr/12/docs/n0_error/: fn.Ok.html  macro.anyerr.html  macro.try_or.html
pr/14/docs/n0_error/: enum.ErrorRef.html  enum.SourceFormat.html  index.html  struct.AnyError.html  struct.Chain.html  struct.NoneError.html  struct.Report.html  trait.StackError.html  trait.StackResultExt.html
pr/15/docs/n0_error/: macro.bail.html  macro.ensure.html  macro.ensure_any.html  macro.try_or_any.html  struct.AnyError.html  trait.StackError.html  trait.StackErrorExt.html  trait.StdResultExt.html
pr/16/docs/: search-index.js
pr/16/docs/n0_error/: derive.StackError.html  macro.bail_any.html  struct.NoneError.html
pr/17/docs/n0_error/: attr.stack_error.html  derive.StackError.html  enum.SourceFormat.html  macro.bail.html  macro.bail_any.html  macro.ensure.html  macro.try_or.html  macro.try_or_any.html  struct.AnyError.html  struct.Location.html  struct.Report.html  type.Result.html
pr/18/docs/n0_error/: enum.ErrorRef.html  fn.Ok.html  index.html  (+7 more)
pr/19/docs/: help.html  settings.html
pr/3/docs/: crates.js  search-index.js
pr/34/docs/: src-files.js
pr/39/docs/: help.html
pr/4/docs/: search-index.js
pr/41/docs/: crates.js
pr/44/docs/: settings.html
pr/45/docs/: search-index.js
pr/6/docs/: search-index.js  src-files.js
pr/7/docs/: search-index.js
pr/main/docs/: search-index.js
src/: any.rs  error.rs  ext.rs  lib.rs  location.rs  macros.rs  meta.rs  tests.rs
src/tests/: util.rs
tests/: basic.rs  transparent.rs  util.rs
(+301 files in other folders)
