[package]
name = "n0-error"
version = "0.1.0"
edition = "2024"

[dependencies]
n0-error-macros = { path = "n0-error-macros" }
anyhow = { version = "1", optional = true }
derive_more = { version = "2.0.1", features = ["debug", "display"] }
spez = "0.1.2"

[dev-dependencies]
anyhow = "1"

[features]
default = ["anyhow"]
anyhow = ["dep:anyhow"]
