[package]
name = "n0-error"
version = "0.1.0"
edition = "2024"
readme = "README.md"
description = "ergonomic errors with call-site location"
license = "MIT OR Apache-2.0"
authors = ["Frando <franz@n0.computer>", "n0 team"]
repository = "https://github.com/n0-computer/n0-error"
keywords = ["error", "location", "ergonomic"]

[dependencies]
anyhow = { version = "1.0.100", optional = true }
derive_more = { version = "2.0.1", features = ["debug", "display"] }
n0-error-macros = { path = "n0-error-macros" }
spez = "0.1.2"

[dev-dependencies]
anyhow = "1"

[profile.dev-ci]
inherits = 'dev'
opt-level = 1

[features]
default = []
anyhow = ["dep:anyhow"]
