[package]
name = "n0-error"
version = "0.1.3"
edition = "2024"
readme = "README.md"
description = "ergonomic errors with call-site location"
license = "MIT OR Apache-2.0"
authors = ["Frando <franz@n0.computer>", "n0 team"]
repository = "https://github.com/n0-computer/n0-error"
keywords = ["error", "location", "ergonomic"]

[dependencies]
anyhow = { version = "1.0.101", optional = true }
n0-error-macros = { path = "n0-error-macros", version = "0.1.3" }
spez = "0.1.2"

[dev-dependencies]
anyhow = "1"

[profile.dev-ci]
inherits = 'dev'
opt-level = 1

[features]
default = []
anyhow = ["dep:anyhow"]

[workspace]
members = ["n0-error-macros"]
