[package]
name = "n0-error-macros"
version = "0.1.0"
edition = "2021"
description = "macros for n0-error"
license = "MIT OR Apache-2.0"
authors = ["Frando <franz@n0.computer>", "n0 team"]
repository = "https://github.com/n0-computer/n0-error"
keywords = ["error", "location", "ergonomic"]

[lib]
proc-macro = true

[dependencies]
heck = "0.5"
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "extra-traits"] }
